Deployment on 2nd Feb
Deployment on 2nd Feb

--- a/force-app/main/default/classes/CP_ConvertContactToOnboarding.cls
+++ b/force-app/main/default/classes/CP_ConvertContactToOnboarding.cls
@@ -2,8 +2,7 @@
 * @author Eswar
 * @date 25/01/2023
 * @description  This batch will run daily, if any applicant DOJ is equal to 10days from today then will create onboarding record as well as send email with 
-				onboarding form. Or if DOJ less than 10days then on which date DOJ is updated on that day itself create onboarding record as well as send 
-				email with onboarding form.
+				onboarding form. 
 *
 *               Test code coverage provided by the following test class:
 *               - CP_ConvertContactToOnboardingTest
@@ -32,45 +31,22 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
         List<Contact> applicantsToSendMail = new List<Contact>();
         
         for(Contact contactRec : contactList){
-            if(contactRec.EMS_EM_JD__c.addDays(-10) == System.today() && contactRec.Is_Email_Sent__c == false){
+            if(contactRec.EMS_EM_JD__c.addDays(-10) == System.today()){
                 EMS_EM_Onboarding_Request__c applicantRec = new EMS_EM_Onboarding_Request__c();
                 applicantRec.EMS_EM_Personal_Email__c = contactRec.Email;
                 applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
                 applicantsList.add(applicantRec);
-                string status = sendOnboardingEmail(contactRec.Email,contactRec.Id);
-                if(status=='success'){
-                  contactRec.Is_Email_Sent__c=true; 
-                  applicantsToSendMail.add(contactRec);
-               	}
-                else{
-                   contactRec.Is_Email_Sent__c=false;   
-                }
-            }
-            else if(contactRec.EMS_EM_JD__c < (System.today().addDays(10)) && contactRec.Is_Email_Sent__c == false && contactRec.EMS_EM_JD__c.addDays(-10) != System.today()){
-                EMS_EM_Onboarding_Request__c applicantRec = new EMS_EM_Onboarding_Request__c();
-                applicantRec.EMS_EM_Personal_Email__c = contactRec.Email;
-                applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
-                applicantsList.add(applicantRec);
-                string status =  sendOnboardingEmail(contactRec.Email,contactRec.Id);
-                if(status=='success'){
-                   	contactRec.Is_Email_Sent__c=true;
-                    applicantsToSendMail.add(contactRec); 
-                }
-               	else{
-                   	system.debug('status'+ status);
-               	}
+                sendOnboardingEmail(contactRec.Email,contactRec.Id);
+                
             }
         }
         insert applicantsList;
-        if(applicantsToSendMail.size()>0){
-			update applicantsToSendMail; 
-        }
     }
     
     public static String sendOnboardingEmail(String email,string recordId){
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
-                                      where name ='Onboarding Form Email'];
+                                      where name ='Onboarding Form Email' LIMIT 1];
         List<string> emailList = new List<string>();
         emailList.add(email);
         Messaging.SingleEmailMessage message = new Messaging.SingleEmailMessage();
